# entra-id-protected-mcp-server

./: .env.example  LOGGING_GUIDE.md  README.md  config.py  main.py  pyproject.toml  requirements.txt  utils.py
auth/: entra_auth_provider.py
src/: main.py
src/auth/: claims_helpers.py  entra_auth_provider.py  obo_client.py
src/common/: config.py  logging_config.py
src/tools/: azure_vm.py  graph_user.py  role_based_info.py  userinfo.py
tests/: README.md  __init__.py  conftest.py
tests/test_auth/: __init__.py  test_claims_helpers.py  test_entra_auth_provider.py  test_obo_client.py
tests/test_common/: test_config.py  test_logging_config.py  test_utils.py
tests/test_tools/: __init__.py  test_azure_vm.py  test_graph_user.py  test_init.py  test_role_based_info.py  test_userinfo.py
tools/: __init__.py  azure_vm.py  graph_user.py
